--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,90 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: sans-serif;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  min-height: 100vh;
+  background: #f7ecf9;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.app-container {
+  height: 500px;
+  width: 350px;
+  background: #c0ace6;
+  border-radius: 20px;
+  box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.75);
+}
+
+.temperature-display-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 70%;
+}
+
+.temperature-display {
+  display: flex;
+  border-radius: 50%;
+  color: #ffffff;
+  height: 220px;
+  width: 220px;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  font-size: 48px;
+  border: 3px #ffffff solid;
+  transition: background 0.5s;
+}
+
+button {
+  border-radius: 100px;
+  height: 80px;
+  width: 80px;
+  font-size: 32px;
+  color: #ffffff;
+
+  margin-right: 45px;
+  margin-left: 45px;
+}
+
+.button-plus {
+  background: firebrick;
+  border:  firebrick solid;
+
+}
+
+.button-plus:hover {
+  background: rgb(227, 125, 48);
+  border: rgb(227, 125, 48) solid;
+  cursor : pointer;
+}
+
+.button-minus {
+  background: rgb(87, 115, 239);
+  border:  rgb(87, 115, 239) solid;
+
+}
+
+.button-minus:hover {
+  background: rgb(49, 63, 123);
+  border: rgb(49, 63, 123) solid;
+  cursor : pointer;
+}
+button:focus {
+  outline: 0;
+}
+
+.natural {
+  background: rgb(75, 237, 124);
+}
+
+.cold {
+  background: #035aa6;
+}
+
+.hot {
+  background: #ff5200;
 }
